# WL-Interpreter-Advanced

./: Add.cpp  Add.h  CMakeLists.txt  Chs.cpp  Chs.h  Combine.cpp  Combine.h  Copy.cpp  Copy.h  Get.cpp  Get.h  Gotos.cpp  Gotos.h  Hlt.cpp  Hlt.h  Ifs.cpp  Ifs.h  Instruction.h  Invoker.cpp  Invoker.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  README.md  README.txt  Set.cpp  Set.h  VarInt.cpp  VarInt.h  VarList.cpp  VarList.h  input.wl  main.cpp
